--- a/src/css/style.css
+++ b/src/css/style.css
@@ -53,7 +53,7 @@
   border-radius: 8px;
   margin-top: 20px;
   padding: 20px;
-  background-color: #e6ebec;
+  background-color: #e6ebec98;
   text-align: center;
 }
 
